# pyCameraModel

./: .gitignore  README.md  pyproject.toml
src/pyCameraModel/models/: __init__.py  base_model.py  eucm.py  opencv_model.py  ucm.py
tests/: test_models.py
