[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "pyCameraModel"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0 OR MIT"
dependencies = [
  "numpy",
  "scipy"
]

[tool.hatch.version]
source = "regex_commit"
path = "src/pyCameraModel/__about__.py"
[tool]

[tool.hatch.envs.default]
pre-install-commands = [
  "hatch version dev",
]